--- a/coverage.html
+++ b/coverage.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 	      <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/material.css">
     </head>
     <body>
 
@@ -64,16 +65,76 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="good">
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#HEROKU_URL">credential.ts</a>
+            </td>
+            <td>variable</td>
+            <td>HEROKU_URL</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/AppPage.html">e2e/src/app.po.ts</a>
+            </td>
+            <td>class</td>
+            <td>AppPage</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#routerAnimation">src/app/animations/router.animation.ts</a>
+            </td>
+            <td>variable</td>
+            <td>routerAnimation</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#slideToTheLeft">src/app/animations/router.animation.ts</a>
+            </td>
+            <td>variable</td>
+            <td>slideToTheLeft</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#slideToTheRight">src/app/animations/router.animation.ts</a>
+            </td>
+            <td>variable</td>
+            <td>slideToTheRight</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AppComponent.html">src/app/app.component.ts</a>
             </td>
             <td>component</td>
             <td>AppComponent</td>
-            <td align="right" data-sort="66">
-                <span class="coverage-percent">66 %</span>
-                <span class="coverage-count">(2/3)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(2/4)</span>
             </td>
         </tr>
         <tr class="good">
@@ -112,16 +173,16 @@
                 <span class="coverage-count">(15/23)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ResetPasswordComponent.html">src/app/auth/email/reset-password/reset-password.component.ts</a>
             </td>
             <td>component</td>
             <td>ResetPasswordComponent</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(3/9)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(2/8)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -179,9 +240,9 @@
             </td>
             <td>component</td>
             <td>SignupComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(6/12)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(3/9)</span>
             </td>
         </tr>
         <tr class="low">
@@ -208,102 +269,6 @@
                 <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/BoardComponent.html">src/app/board/board.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>BoardComponent</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(1/3)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/CreateTaskComponent.html">src/app/board/tasks/create-task/create-task.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>CreateTaskComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(7/14)</span>
-            </td>
-        </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/TaskHttpService.html">src/app/board/tasks/task-http.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>TaskHttpService</td>
-            <td align="right" data-sort="62">
-                <span class="coverage-percent">62 %</span>
-                <span class="coverage-count">(5/8)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/TaskStateService.html">src/app/board/tasks/task-state.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>TaskStateService</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(4/12)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/ITask.html">src/app/board/tasks/task.model.ts</a>
-            </td>
-            <td>interface</td>
-            <td>ITask</td>
-            <td align="right" data-sort="16">
-                <span class="coverage-percent">16 %</span>
-                <span class="coverage-count">(1/6)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/TasksCardListComponent.html">src/app/board/tasks/tasks-card-list/tasks-card-list.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>TasksCardListComponent</td>
-            <td align="right" data-sort="27">
-                <span class="coverage-percent">27 %</span>
-                <span class="coverage-count">(5/18)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/TasksComponent.html">src/app/board/tasks/tasks.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>TasksComponent</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(5/15)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./pipes/UppercaseFirstLetterPipe.html">src/app/board/uppercase-first-letter.pipe.ts</a>
-            </td>
-            <td>pipe</td>
-            <td>UppercaseFirstLetterPipe</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
@@ -326,6 +291,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/FooterComponent.html">src/app/components/footer/footer.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>FooterComponent</td>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -388,6 +365,150 @@
                 <span class="coverage-count">(1/2)</span>
             </td>
         </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./pipes/UppercaseFirstLetterPipe.html">src/app/pipes/uppercase-first-letter.pipe.ts</a>
+            </td>
+            <td>pipe</td>
+            <td>UppercaseFirstLetterPipe</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/CreateProjectComponent.html">src/app/projects/create-project/create-project.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>CreateProjectComponent</td>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(3/12)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/ProjectHttpService.html">src/app/projects/project-http.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>ProjectHttpService</td>
+            <td align="right" data-sort="62">
+                <span class="coverage-percent">62 %</span>
+                <span class="coverage-count">(5/8)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/ProjectStateService.html">src/app/projects/project-state.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>ProjectStateService</td>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(4/10)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/IProject.html">src/app/projects/project.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>IProject</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ProjectsComponent.html">src/app/projects/projects.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ProjectsComponent</td>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(6/15)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/CreateTaskComponent.html">src/app/projects/tasks/create-task/create-task.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>CreateTaskComponent</td>
+            <td align="right" data-sort="42">
+                <span class="coverage-percent">42 %</span>
+                <span class="coverage-count">(6/14)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/TaskHttpService.html">src/app/projects/tasks/task-http.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>TaskHttpService</td>
+            <td align="right" data-sort="62">
+                <span class="coverage-percent">62 %</span>
+                <span class="coverage-count">(5/8)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/TaskStateService.html">src/app/projects/tasks/task-state.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>TaskStateService</td>
+            <td align="right" data-sort="27">
+                <span class="coverage-percent">27 %</span>
+                <span class="coverage-count">(3/11)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/ITask.html">src/app/projects/tasks/task.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ITask</td>
+            <td align="right" data-sort="16">
+                <span class="coverage-percent">16 %</span>
+                <span class="coverage-count">(1/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TasksCardListComponent.html">src/app/projects/tasks/tasks-card-list/tasks-card-list.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TasksCardListComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/15)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TasksComponent.html">src/app/projects/tasks/tasks.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TasksComponent</td>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(8/20)</span>
+            </td>
+        </tr>
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
@@ -398,6 +519,18 @@
             <td align="right" data-sort="66">
                 <span class="coverage-percent">66 %</span>
                 <span class="coverage-count">(2/3)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#displayFormErrors">src/app/shared/form-errors.utils.ts</a>
+            </td>
+            <td>variable</td>
+            <td>displayFormErrors</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -431,6 +564,30 @@
             </td>
             <td>variable</td>
             <td>environment</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#context">src/test.ts</a>
+            </td>
+            <td>variable</td>
+            <td>context</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#require">src/test.ts</a>
+            </td>
+            <td>variable</td>
+            <td>require</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
