--- a/injectables/AuthService.html
+++ b/injectables/AuthService.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -1500,7 +1501,7 @@ export class AuthService {
             const expirationDate &#x3D; new Date(now.getTime() + expiresInDuration * 1000);
             this.saveAuthData(token, expirationDate);
             this.uiService.showSnackBar(&#x27;Logged in successfully!&#x27;, null, 3000, &#x27;bottom&#x27;);
-            this.router.navigateByUrl(&#x27;/board&#x27;);
+            this.router.navigateByUrl(&#x27;/projects&#x27;);
           }
         })
       );
