--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -58,10 +59,16 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
-                            <a href="#TaskArrayResponseType" title="src/app/board/tasks/task-http.service.ts"><b>TaskArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
+                            <a href="#ProjectArrayResponseType" title="src/app/projects/project-http.service.ts"><b>ProjectArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../project-http.service.ts)</a>
                         </li>
                         <li>
-                            <a href="#TaskResponseType" title="src/app/board/tasks/task-http.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
+                            <a href="#ProjectResponseType" title="src/app/projects/project-http.service.ts"><b>ProjectResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../project-http.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#TaskArrayResponseType" title="src/app/projects/tasks/task-http.service.ts"><b>TaskArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#TaskResponseType" title="src/app/projects/tasks/task-http.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
                         </li>
                         <li>
                             <a href="#UserResponseType" title="src/app/auth/auth.service.ts"><b>UserResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../auth.service.ts)</a>
@@ -73,7 +80,41 @@
     </table>
 </section>
 
-    <h3>src/app/board/tasks/task-http.service.ts</h3>
+    <h3>src/app/projects/project-http.service.ts</h3>
+    <section>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="ProjectArrayResponseType"></a>
+                    <span class="name"><b>ProjectArrayResponseType</b><a href="#ProjectArrayResponseType"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <code>    <code>HttpResponse&lt;literal type&gt;</code>
+</code>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="ProjectResponseType"></a>
+                    <span class="name"><b>ProjectResponseType</b><a href="#ProjectResponseType"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <code>    <code>HttpResponse&lt;literal type&gt;</code>
+</code>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>    <h3>src/app/projects/tasks/task-http.service.ts</h3>
     <section>
     <table class="table table-sm table-bordered">
         <tbody>
