--- a/modules/AuthRoutingModule.html
+++ b/modules/AuthRoutingModule.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -77,7 +78,7 @@ import { LoginComponent } from &#x27;./login/login.component&#x27;;
 
 const routes: Routes &#x3D; [
   { path: &#x27;signup&#x27;, component: SignupComponent },
-  { path: &#x27;login&#x27;, component: LoginComponent },
+  { path: &#x27;login&#x27;, component: LoginComponent, data: { animation: &#x27;isRight&#x27; } },
   { path: &#x27;email&#x27;, loadChildren: () &#x3D;&gt; &quot;import(&#x27;./email/email.module&#x27;).then(m &#x3D;&gt; m.EmailModule)&quot; }
 ];
 
