--- a/dependencies.html
+++ b/dependencies.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 	      <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/material.css">
     </head>
     <body>
 
@@ -48,25 +49,25 @@
     </ol>
     <ul class="dependencies-list">
         <li>
-            <b>@angular/animations</b> : ^8.2.14</li>
+            <b>@angular/animations</b> : ^9.1.0</li>
         <li>
             <b>@angular/cdk</b> : ^8.0.2</li>
         <li>
-            <b>@angular/common</b> : ^8.2.14</li>
+            <b>@angular/common</b> : ^9.1.0</li>
         <li>
-            <b>@angular/compiler</b> : ^8.2.14</li>
+            <b>@angular/compiler</b> : ^9.1.0</li>
         <li>
-            <b>@angular/core</b> : ^8.2.14</li>
+            <b>@angular/core</b> : ^9.1.0</li>
         <li>
-            <b>@angular/forms</b> : ^8.2.14</li>
+            <b>@angular/forms</b> : ^9.1.0</li>
         <li>
             <b>@angular/material</b> : ^8.2.3</li>
         <li>
-            <b>@angular/platform-browser</b> : ^8.2.14</li>
+            <b>@angular/platform-browser</b> : ^9.1.0</li>
         <li>
-            <b>@angular/platform-browser-dynamic</b> : ^8.2.14</li>
+            <b>@angular/platform-browser-dynamic</b> : ^9.1.0</li>
         <li>
-            <b>@angular/router</b> : ^8.2.14</li>
+            <b>@angular/router</b> : ^9.1.0</li>
         <li>
             <b>core-js</b> : ^2.6.10</li>
         <li>
@@ -76,7 +77,7 @@
         <li>
             <b>tslib</b> : ^1.10.0</li>
         <li>
-            <b>zone.js</b> : ~0.9.1</li>
+            <b>zone.js</b> : ~0.10.2</li>
     </ul>
 
                    
