--- a/interceptors/ErrorInterceptor.html
+++ b/interceptors/ErrorInterceptor.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -108,7 +109,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/shared/error.interceptor.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/shared/error.interceptor.ts:11</a></div>
                             </td>
                         </tr>
 
@@ -173,8 +174,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/shared/error.interceptor.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="17"
+                            class="link-to-prism">src/app/shared/error.interceptor.ts:17</a></div>
                 </td>
             </tr>
 
@@ -241,12 +242,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {
-  HttpInterceptor,
-  HttpRequest,
-  HttpHandler,
-  HttpErrorResponse
-} from &#x27;@angular/common/http&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { HttpInterceptor, HttpRequest, HttpHandler, HttpErrorResponse } from &#x27;@angular/common/http&#x27;;
 import { catchError } from &#x27;rxjs/operators&#x27;;
 import { throwError } from &#x27;rxjs&#x27;;
 import { UIService } from &#x27;./ui.service&#x27;;
