--- a/interfaces/ITask.html
+++ b/interfaces/ITask.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -61,7 +62,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/board/tasks/task.model.ts</code>
+            <code>src/app/projects/tasks/task.model.ts</code>
         </p>
 
             <p class="comment">
