--- a/pipes/UppercaseFirstLetterPipe.html
+++ b/pipes/UppercaseFirstLetterPipe.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -60,7 +61,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/board/uppercase-first-letter.pipe.ts</code>
+            <code>src/app/pipes/uppercase-first-letter.pipe.ts</code>
         </p>
 
             <p class="comment">
@@ -112,7 +113,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="10"
-                            class="link-to-prism">src/app/board/uppercase-first-letter.pipe.ts:10</a></div>
+                            class="link-to-prism">src/app/pipes/uppercase-first-letter.pipe.ts:10</a></div>
                 </td>
             </tr>
 
